[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Senarios/PlataformaMovel.gd" type="Script" id=1]
[ext_resource path="res://Assets/Tiles/tile set/plataforma 13.2 (bloco demovimento(on) ).png" type="Texture" id=2]
[ext_resource path="res://Assets/Tiles/tile set/plataforma 13.1 (bloco demovimento(off) ).png" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 27.5, 10.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32.9885, 6.65631 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 13.5483, 1.99052 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 28.9377, 73.4521 )

[node name="PlataformaMovel" type="Node2D" groups=[
"Exclusao",
]]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
frame = 1
playing = true

[node name="Body" type="StaticBody2D" parent="." groups=[
"Exclusao",
]]

[node name="Shape" type="CollisionShape2D" parent="Body"]
position = Vector2( 1, 20 )
shape = SubResource( 2 )

[node name="MudaDirecao" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="Shape" type="CollisionShape2D" parent="MudaDirecao"]
position = Vector2( 0.420441, 21.9202 )
shape = SubResource( 3 )

[node name="PercEntra" type="Area2D" parent="."]

[node name="Shape" type="CollisionShape2D" parent="PercEntra"]
position = Vector2( 3.5636, 6.45901 )
shape = SubResource( 4 )

[node name="PercSai" type="Area2D" parent="."]

[node name="Shape" type="CollisionShape2D" parent="PercSai"]
position = Vector2( 3.72376, -76.9701 )
shape = SubResource( 5 )
[connection signal="body_entered" from="MudaDirecao" to="." method="_on_MudaDirecao_body_entered"]
[connection signal="body_entered" from="PercEntra" to="." method="_on_PercEntra_body_entered"]
[connection signal="body_exited" from="PercSai" to="." method="_on_PercSai_body_exited"]
